# mlops-alura

./: .gitignore  CHANGELOG.md  Dockerfile  house-prices.py  main.py  pyproject.toml  teste.ipynb
app/: house-prices.py  main.py  teste.py
models/: modelo.sav
notebooks/: teste.ipynb
