[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-basicauth>=0.2.0",
    "flask>=3.0.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "textblob>=0.18.0.post0",
]
